--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -19,7 +19,7 @@
                 
                 <div class="row center">
                     <h5 class="header col s12 light">
-                    	Idle Heroes fusion manager.
+                    	Heroes manager.
                     </h5>
                 </div>
                 
