incluir seu nome completo no rodapé da página. ISSO TA MUITO ERRADO!

--- a/src/main/resources/static/skills/edit.htm
+++ b/src/main/resources/static/skills/edit.htm
@@ -62,5 +62,9 @@
 	        	App.get("skills/"+App.hash());
 	        </script>
         </ls-footer>
+        <footer>
+            <p>Candidato: Genivaldo Alves</p>
+            <p><a href="geniinho@hotmail.com">Geniinho@hotmail.com</a></p>
+        </footer>
     </body>
 </html>
