--- a/src/main/resources/static/stats/list.htm
+++ b/src/main/resources/static/stats/list.htm
@@ -52,5 +52,9 @@
 	        	App.getList("stats");
 	        </script>
         </ls-footer>
+        <footer>
+            <p>Candidato: Genivaldo Alves</p>
+            <p><a href="geniinho@hotmail.com">Geniinho@hotmail.com</a></p>
+        </footer>
     </body>
 </html>
