--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -67,5 +67,9 @@
         		App.getList("menus");
 			</script>
         </ls-footer>
+	<footer>
+		<p>Candidato: Genivaldo Alves</p>
+		<p><a href="geniinho@hotmail.com">Geniinho@hotmail.com</a></p>
+	</footer>
     </body>
 </html>
