--- a/src/main/resources/static/skills/list.htm
+++ b/src/main/resources/static/skills/list.htm
@@ -46,5 +46,9 @@
 	        	App.getList("skills");
 	        </script>
         </ls-footer>
+        <footer>
+            <p>Candidato: Genivaldo Alves</p>
+            <p><a href="geniinho@hotmail.com">Geniinho@hotmail.com</a></p>
+        </footer>
     </body>
 </html>
